
    - Feature: Adding links to the new Lengow help center
    - Bugfix: [export] Data recovery for custom fields
    - Bugfix: [import] Send email enabled for the report email
    - Bugfix: [import] Array to string conversion for order comments
    - Bugfix: [export] Modifying Legacy Fields for Image Fields
    - Bugfix: [import] New parameter in updateQty() function for version 1.7.3

=============================================================
Version 3.0.3
=============================================================

    - Feature: [import] Improved logs on carrier matching
    - Bugfix: Switching from boolean to integer for checkbox type data
    - Bugfix: Additional verification for non-case sensitive Databases
    - Bugfix: [export] Improved recovery of the store's export settings

=============================================================
Version 3.0.2
=============================================================

    - Feature: Adding refunded status to order filters
    - Feature: Add drop-down list for number of items per page for products & orders
    - Feature: Protocol change to https for API calls
    - Feature: Implementation of the matching of shipping methods in carrier matching
    - Feature: Managing delivery_date and custom_carrier parameters for sending action
    - Feature: Check and complete an order not imported if it is canceled or refunded
    - Bugfix: Optimizing the display of errors in the order screen
    - Bugfix: [action] Correction of the dates of creation and update of the actions
    - Bugfix: [action] Deleting the shipping_date parameter in the action check request
    - Bugfix: Deleting the indefinite index user_id in the connector
    - Bugfix: Language code recovery for the Lengow iframe
    - Bugfix: Lengow multi-tab installation problem in the Prestashop menu

=============================================================
Version 3.0.1
=============================================================
