@@ -21,7 +21,7 @@
 /classes/models/LengowSync.php|8550692bdd4d2d00917eeefb34d18c3b
 /classes/models/LengowCountry.php|9272660d9cb039e52ef2fd1bfca33caa
 /classes/models/LengowHook.php|b46c2bffdce1124e1c20c3676f2cfaa4
-/classes/models/LengowImport.php|c42f8726ff012b5ea3660943c8c74281
+/classes/models/LengowImport.php|86018894eae006f8184bba9b693d3b7c
 /classes/models/LengowFeed.php|63e52b29456e3402cfaa5e8472f7f318
 /classes/models/LengowCheck.php|a1ef4482c94d869438de225373cefd65
 /classes/models/LengowBackup.php|b925fe77481a09e3b1cda3506d809bc0
